<resources>
    <string name="app_name">Locachat</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">register</string>
    <string name="register_now">register now</string>
    <string name="tab_text_1">groups</string>
    <string name="tab_text_2">profile</string>
    <string name="tab_text_3">map</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_api_key">AIzaSyCN9wVJRoyVKUwM7ejvwMvdREjtTef3WQg</string>
    <string name="group_name">group name</string>
    <string name="new_group">new group</string>
    <string name="my_groups">My Groups</string>
    <string name="hidden_groups">Hidden Groups</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="radius_meters">radius [meters]</string>
    <string name="select_type">select type</string>
    <string name="select_group_type">select group type</string>
    <string name="hide_item">hide group</string>
    <string name="unhide_item">restore group</string>
    <string name="message_hint">message...</string>
    <string name="address">Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>

    <string-array name="group_types">
        <item>select group type</item>
        <item>Static</item>
        <item>Dynamic</item>
    </string-array>

</resources>
