<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stein.client_1.RegisterActivity">

    <Button
        android:id="@+id/btn_register"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:text="@string/register_now"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="311dp" />

    <EditText
        android:id="@+id/et_username_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_lname_register"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/et_password_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username_register"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_fname_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_lname_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_fname_register"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_address_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password_register"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName" />
</RelativeLayout>
