<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stein.client_1.LoginActivity">

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_password"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="textStart" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="textStart" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/et_password"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_alignStart="@+id/et_password"
        android:layout_below="@+id/et_password"
        android:text="@string/login"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tw_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold" />
</RelativeLayout>
