<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stein.client_1.NewGroupActivity">

    <Button
        android:id="@+id/btn_create_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/new_group"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/et_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_group_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/radius_meters"
        android:inputType="number"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_group_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_radius"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/et_radius"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/group_name"
        android:inputType="textPersonName"
        android:textAlignment="center" />


    <Spinner
        android:id="@+id/sp_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_create_group"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="56dp" />


</RelativeLayout>
